Update README.md added Commands(reload) added Permissions
Signed-off-by: peyang-Celeron <mikasa.chibimasu@gmail.com>

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -10,7 +10,8 @@ depend: [Jecon]
 commands:
    atm:
       description: a Atm open command.
-      permission: atm.open
 permissions:
    atm.open:
       description: ATM Open Commands.
+   atm.admin:
+      description: ATM Admin Commands
