--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ language: java
 jdk:
   - openjdk8
 before_script:
-  - curl -L https://codecliimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
 
