--- a/pom.xml
+++ b/pom.xml
@@ -6,15 +6,15 @@
 
     <groupId>ml.peya.plugins</groupId>
     <artifactId>PeyangATM</artifactId>
-    <version>1.0</version>
+    <version>2.3.43</version>
     <repositories>
         <repository>
             <id>spigot-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
         <repository>
-            <id>himajyun-repo</id>
-            <url>https://himajyun.github.io/mvn-repo/</url>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
         </repository>
     </repositories>
 
@@ -26,9 +26,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>jp.jyn</groupId>
-            <artifactId>Jecon</artifactId>
-            <version>2.1.0</version>
+            <groupId>com.github.MilkBowl</groupId>
+            <artifactId>VaultAPI</artifactId>
+            <version>1.7</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
